# ceratophrys

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: cat.rs  cat_anime.rs
src/: animation.rs  bmp.rs  canvas.rs  color.rs  entity.rs  filler.rs  filter.rs  filters.rs  frame.rs  gif.rs  image.rs  lib.rs  line.rs  offset.rs  palette.rs  pixel.rs  point.rs  polygon.rs  position.rs  rectangle.rs  region.rs  render.rs  scale.rs  shape.rs  shapes.rs  silhouette.rs  size.rs  text_image.rs
src/filters/: erase.rs  fill.rs  scale.rs  scoped.rs  silhouette.rs
src/shapes/: line.rs  rectangle.rs
