[package]
name = "ceratophrys"
version = "0.0.2"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Library to draw pixel art as code"
homepage = "https://github.com/sile/ceratophrys"
repository = "https://github.com/sile/ceratophrys"
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.12.0"

[dev-dependencies]
orfail = "1.1.0"
